Fixed: - When screen is vertically small, sidebar bottom menu overlaps top menu

--- a/src/components/ViewDao/ViewDao.scss
+++ b/src/components/ViewDao/ViewDao.scss
@@ -224,6 +224,7 @@ button:hover {
   background-color: $sky;
   color: $white;
   flex-grow: 1;
+  overflow: scroll;
 
   &:hover {
     z-index: 100000;
@@ -262,6 +263,7 @@ button:hover {
 .daoNavigation {
   position: relative;
   height: 100%;
+  min-height: 730px;
 
   .daoName {
     padding: 15px;
